# boggler-rs

./: Cargo.toml  README.md
benches/: hash_trie_benchmark.rs  trie_benchmark.rs
src/: arena_trie.rs  board.rs  hash_trie.rs  lib.rs  main.rs  tries.rs
src/board/: mod.rs
src/dictionary/: mod.rs
src/solver/: mod.rs  trie.rs
src/tries/: arena_trie.rs  enums.rs  hash_trie.rs  radix_trie.rs  traits.rs
