[package]
name = "boggler-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
criterion = "0.5.1"
tabled = "0.15.0"

[[bench]]
name = "trie_benchmark"
harness = false
